# hexapod

./: .bazelrc  README.md  WORKSPACE
apps/: BUILD.bazel  find_resource_test.py  hex_simulation.cc  quad_simulation.cc
apps/models/: BUILD.bazel
apps/models/urdf/: a1.urdf  phantomx.urdf  trimmed_down.urdf
