# -*- mode: python -*-
# vi: set ft=python :

load("@drake//tools/skylark:py.bzl", "py_binary", "py_test")
load("@drake//tools/skylark:pybind.bzl", "pybind_py_library")

cc_binary(
    name = "hex_simulation",
    srcs = ["hex_simulation.cc"],
    data = [
            "//apps:models"],
    deps = [
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework:diagram",
        "@drake//systems/primitives:demultiplexer",
        "@drake//systems/primitives:multiplexer",
        "@drake//visualization:visualization_config_functions"
    ],
)

## Removed a bunch of crap for reference check this out here - 
## https://github.com/RobotLocomotion/drake-external-examples/tree/main/drake_bazel_external/apps
